--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 *:before,
@@ -16,7 +18,7 @@
 }
 
 body {
-  /* Establece la fuente de Google aquí */
+  font-family: 'Raleway', Helvetica, Arial, sans-serif;
   margin: 0 auto;
   font-size: 16px;
   line-height: 1.71429;
@@ -34,4 +36,86 @@ a {
 
 a:hover {
   color: #E95853;
+}
+
+header {
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
+  top: 0;
+}
+
+.link {
+  font-weight: 700;
+  padding: 21px;
+  display: inline-block;
+}
+
+.menu {
+  padding: 14px 70px;
+  overflow: auto;
+}
+
+.logo {
+  float: right;
+}
+#top {
+    position: absolute;
+    top: 0;
+}
+#home {
+  background-image: url(../images/bg-home.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 554px;
+  text-align: center;
+  margin-top: 80px;
+}
+
+#home .container {
+  color: #fff;
+  padding: 70px;
+}
+
+.text-home {
+  font-size: 53px;
+}
+
+.btn-home {
+  background: #2ecc71;
+  color: #fff;
+  padding: 11px 20px;
+  border-radius: 1px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-top: 63px;
+  display: inline-block;
+  font-size: 14px;
+}
+#services {
+  background-color: #f17c72;
+  text-align: center;
+  color: #fff;
+  padding: 70px 7px;
+}
+#services h4 {
+  max-width: 600px;
+  margin: 0 auto;
+}
+.box-services {
+  display: inline-block;
+  width: 30%;
+  margin-top: 63px;
+}
+.text-services {
+  font-size: 35px;
+  letter-spacing: 2px;
+}
+footer {
+  text-align: center;
+  height: 100px;
+  background-color: #373b47;
+  color: #fff;
+  padding-top: 7px;
 }
