--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,20 +1,12 @@
-/*
- * Clases reutilizables para el proyecto
- * (Aquí pueden ir las clases de tu grid)
- */
-
 .mb-0 {
   margin-bottom: 0;
 }
-
 .mt-0 {
   margin-top: 0;
 }
-
 .text-uppercase {
   text-transform: uppercase;
 }
-
 .img-responsive {
 	max-width: 100%;
 	height: auto;
@@ -25,4 +17,7 @@
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
+}
+.hidden {
+	display: none !important;
 }
