--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,7 +91,7 @@ h6 {
   font-size: 53px;
 }
 .btn-home {
-  background: #2ecc71;
+  background: rgb(46, 204, 113);
   color: #fff;
   padding: 11px 20px;
   border-radius: 1px;
@@ -123,9 +123,14 @@ h6 {
   display: inline-block;
   width: 30%;
   margin-top: 63px;
+  padding: 0 2em;
 }
 .box-services h5 {
   padding-top: 21px;
+}
+.box-services img {
+  max-width: 100%;
+  height: auto;
 }
 .text-services {
   font-size: 35px;
@@ -150,6 +155,40 @@ h6 {
 }
 .work-services h5 {
   padding-top: 35px;
+}
+#work-services-modal {
+  width: 100%;
+  height: 100vh;
+  background: rgba(46, 204, 113, .8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: block;
+}
+.modal-body {
+  position: relative;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1em .5em .5em;
+  max-width: 900px;
+  margin: 10vh auto;
+  width: 90%;
+  text-align: center;
+}
+.modal-body img {
+  max-width: 100%;
+  height: auto;
+}
+#close {
+  background-image: url(../images/close.png);
+  background-size: contain;
+  width: 50px;
+  height: 50px;
+  top: 1em;
+  right: 1em;
+  position: absolute;
+  cursor: pointer;
 }
 footer {
   text-align: center;
