--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,13 +79,19 @@ h6 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 554px;
+  overflow: hidden;
   text-align: center;
   margin-top: 80px;
 }
 #home .container {
   color: #fff;
-  padding: 70px;
+  padding: 10vh 2em;
+}
+#home h2 {
+    font-size: 28px;
+}
+#home h1 {
+  margin: 35px 0;
 }
 .text-home {
   font-size: 53px;
